Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104491

mouse event broken after continuous transition animation in StackView.

    XMLWordPrintable

Details

    • Linux/X11
    • 572b3ae9f3 (qt/qtdeclarative/dev) 572b3ae9f3 (qt/tqtc-qtdeclarative/dev) f6b2fa7cc4 (qt/qtdeclarative/6.3) f6b2fa7cc4 (qt/tqtc-qtdeclarative/6.3) 80c0df64ea (qt/qtdeclarative/6.4) 80c0df64ea (qt/tqtc-qtdeclarative/6.4) f6b2fa7cc4 (qt/qtdeclarative/6.3.2)

    Description

      How to reproduce:
      1) run below example.
      2) click "Push" button
      3) click "Push and Pop" button
      4) broken mouse event
       

      import QtQuick
      import QtQuick.Controls
      
      Window {
          width: 1920
          height: 480
          visible: true
      
          StackView {
              id: stackView
              initialItem: page
              width: 1920
              height: 480
      
              onBusyChanged: console.log("StackView busy: ", busy)
      
              Component {
                  id: page
      
                  Pane {
                      id: pane
                      width: parent ? parent.width : 0
      
                      Column {
                          spacing: 40
                          width: parent.width
      
                          Label {
                              width: parent.width
                              wrapMode: Label.Wrap
                              horizontalAlignment: Qt.AlignHCenter
                              text: "StackView"
                          }
      
                          Button {
                              id: button
                              text: "Push"
                              anchors.horizontalCenter: parent.horizontalCenter
                              width:180
                              height: 60
                              onClicked: stackView.push(page)
                          }
      
                          Button {
                              text: "Pop"
                              anchors.horizontalCenter: parent.horizontalCenter
                              width:180
                              height: 60
                              onClicked: {
                                  stackView.pop()
                              }
                          }
      
                          Button {
                              text: "Push & Pop"
                              enabled: stackView.depth > 1
                              anchors.horizontalCenter: parent.horizontalCenter
                              width:180
                              height: 60
                              onClicked: {
                                  stackView.push(page)
                                  stackView.pop()
                              }
                          }
                      }
                  }
              }
      
              pushEnter: Transition {
                  PropertyAnimation {
                      property: "x"
                      from: 1920
                      to: 0
                      duration: 667
                      easing.type: Easing.InOutQuint
                  }
              }
              pushExit: Transition {
                  PropertyAnimation {
                      property: "x"
                      from: 0
                      to: -1920
                      duration: 667
                      easing.type: Easing.InOutQuint
                  }
              }
              popEnter: Transition {
                  PropertyAnimation {
                      property: "x"
                      from: -1920
                      to: 0
                      duration: 667
                      easing.type: Easing.InOutQuint
                  }
              }
              popExit: Transition {
                  PropertyAnimation {
                      property: "x"
                      from: 0
                      to: 1920
                      duration: 667
                      easing.type: Easing.InOutQuint
                  }
              }
          }
      }

      Attachments

        For Gerrit Dashboard: QTBUG-104491
        # Subject Branch Project Status CR V

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            bumjoon.park BUMJOON PARK (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes