src/quick/items/qquickitemviewtransition.cpp
@@ -579,6 +579,8 @@ void QQuickItemViewTransitionableItem::stopTransition()
 {
     if (transition)
         RETURN_IF_DELETED(transition->cancel());
+    delete transition;
+    transition = nullptr;
     clearCurrentScheduledTransition();
     resetNextTransitionPos();
 }
